--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     <link rel="shortcut icon" type="image/png" href="https://www.reprograma.com.br/assets/img/favicon.ico"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../../assets/css/main.css">
-    <link rel="stylesheet" type="text/css" href="../../assets/css/cv.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/main.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/cv.css">
 </head>
 
 <body>
 
     <header>
-        <a class="arrow-back" href="../../index.html"><img src="../../assets/img/arrow-branca.png" alt="seta branca em fundo roxo apontando para a esqueda"></a>
-        <img class="header-logo" src="../../assets/img/logo-reprograma.png" alt="logo reprograma branco em fundo roxo">
+        <a class="arrow-back" href="./index.html"><img src="../../assets/img/arrow-branca.png" alt="seta branca em fundo roxo apontando para a esqueda"></a>
+        <img class="header-logo" src="./assets/img/logo-reprograma.png" alt="logo reprograma branco em fundo roxo">
     </header>
 
     <main>
@@ -31,10 +31,10 @@
             </div>
             <address>
                 <ul>
-                    <li><img src="../../assets/img/location.png" alt=""><span>Brasília</span></li>
-                    <li><img src="../../assets/img/linkedin.png" alt=""><a href="https://www.linkedin.com/in/tereza-niederauer/" id="linkedin" target="_blanck">LinkdIn</a></li>
-                    <li><img src="../../assets/img/github.png" alt=""><a href="https://github.com/Trooper2123" id="github" target="_blanck">GitHub</a></li>
-                    <li><img src="../../assets/img/envelope.png" alt=""><a href="tete.leticia@gmail.com" id="email" target="_blanck">tete.leticia@gmail.com</a></li>
+                    <li><img src="./assets/img/location.png" alt=""><span>Brasília</span></li>
+                    <li><img src="./assets/img/linkedin.png" alt=""><a href="https://www.linkedin.com/in/tereza-niederauer/" id="linkedin" target="_blanck">LinkdIn</a></li>
+                    <li><img src="./assets/img/github.png" alt=""><a href="https://github.com/Trooper2123" id="github" target="_blanck">GitHub</a></li>
+                    <li><img src="./assets/img/envelope.png" alt=""><a href="tete.leticia@gmail.com" id="email" target="_blanck">tete.leticia@gmail.com</a></li>
                 </ul>
             </address>
         </section>
@@ -67,7 +67,7 @@
         </section>
         <section id="studies">
             <div class="section-icon">
-                <img src="../../assets/img/graduate.png" alt="">
+                <img src="./assets/img/graduate.png" alt="">
             </div>
             <h2 class="background-DEBBDD">O que já estudei</h2>
             <div class="study">
@@ -93,7 +93,7 @@
         </section>
         <section id="interests">
             <div class="section-icon">
-                <img src="../../assets/img/checklist.png" alt="">
+                <img src="./assets/img/checklist.png" alt="">
             </div>
             <h2 class="background-DEBBDD">Meus outros aprendizados e interesses</h2>
             <div class="interest">
@@ -122,7 +122,7 @@
         </section>
         <section id="skills">
             <div class="section-icon">
-                <img src="../../assets/img/rating.png" alt="">
+                <img src="./assets/img/rating.png" alt="">
             </div>
             <div id="skills-list">
                 <h2>No que me destaco</h2>
@@ -255,9 +255,9 @@
     <footer>
         <address>
             <ul>
-                <li><a href="" id="instagram"><img src="../../assets/img/insta.png" alt="logo do instagram dentro de um círculo">@reprogramabr</a></li>
-                <li><a href="" id="facebook"><img src="../../assets/img/fb.png" alt="f do logo do facebook dentro de um círculo">fb.com/reprogramabr</a></li>
-                <li><a href="" id="email"><img src="../../assets/img/mail.png" alt="ícone de envelope dentro de um círculo">@reprograma.com.br</a></li>
+                <li><a href="" id="instagram"><img src="./assets/img/insta.png" alt="logo do instagram dentro de um círculo">@reprogramabr</a></li>
+                <li><a href="" id="facebook"><img src="./assets/img/fb.png" alt="f do logo do facebook dentro de um círculo">fb.com/reprogramabr</a></li>
+                <li><a href="" id="email"><img src="./assets/img/mail.png" alt="ícone de envelope dentro de um círculo">@reprograma.com.br</a></li>
             </ul>
         </address>
         <p>Design by Joana Engel | Código by Natália Izui</p>
@@ -265,5 +265,5 @@
 
 </body>
 
-<script type="text/javascript" src="assets/js/textFit.js"></script>
+<script type="text/javascript" src="./assets/js/textFit.js"></script>
 </html>
