--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Currículo {reprograma}</title>
+    <title>Currículo Tereza {reprograma}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="https://www.reprograma.com.br/assets/img/favicon.ico"/>
@@ -15,8 +15,7 @@
 <body>
 
     <header>
-        <a class="arrow-back" href="index.html"><img src="assets/img/arrow-branca.png" alt="seta branca em fundo roxo apontando para a esqueda"></a>
-        <img class="header-logo" src="assets/img/logo-reprograma.png" alt="logo reprograma branco em fundo roxo">
+       
     </header>
 
     <main>
