--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <body>
 
     <header>
-       
+       <a class="arrow-back" href="https://reprograma.com.br/"><img src="assets/img/arrow-branca.png" alt="seta branca em fundo roxo apontando para a esqueda"></a>
+        <img class="header-logo" src="assets/img/logo-reprograma.png" alt="logo reprograma branco em fundo roxo">
     </header>
 
     <main>
