--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
                 <div class="background-DEBBDD">
                     <h2>O que eu quero</h2>
                 </div>
-                <p> Estou aberta a oportunidades na area de TI, pricipalmente voltadas para front-end e levantamento de requisitos.<br/>
-                    Busco ser uma profissional versátil e fora dos padões tradicionais do mercado.  </p>
+                <p> Estou aberta a oportunidades na área de TI, principalmente voltadas para front-end e levantamento de requisitos.
+                    Busco ser uma profissional versátil e fora dos padrões tradicionais do mercado.  </p>
             </div>
             <address>
                 <ul>
@@ -42,17 +42,17 @@
             <div class="background-DEBBDD">
                 <h2>Um pouco sobre mim</h2>
             </div>
-            <p> Sou apaixonada por livros e extremamente curiosa, desta forma <strong>aprendizados constates e novos desafios</strong> são elementos chave tanto no meio profissional como pessoal.  <br/>
-                Formada em Administração, atualmente estudante de Contabilidade e Segurança da Informação, busquei unir as areas de humanas e exatas para ser uma <strong> profissional versatil</strong> .<br/>
-                Tenho vivencia como <strong>empreendedora</strong> e profissional atuante tanto no meio público como privado.<br/>
-                Hoje busco alinhar minha formação como adminstradora com os conhecimentos em TI para proporcionar <strong>soluções acessíveis e inovadoras</strong>.<br/>
-                  </p>
+            <p> Sou apaixonada por livros e extremamente curiosa, desta forma <strong> aprendizados constantes e novos desafios</strong> são elementos chave tanto no meio profissional como pessoal.
+                Formada em Administração, atualmente estudante de Contabilidade e Segurança da Informação, busquei unir as áreas de humanas e exatas para ser uma <strong>profissional versátil</strong> .
+                Tenho experiência como <strong>empreendedora</strong> e profissional atuante tanto no meio público como privado.
+                Hoje busco alinhar minha formação como administradora com os conhecimentos em TI para proporcionar <strong>soluções acessíveis e inovadoras</strong>.
+            </p>
         </section>
         <section id="works">
             <div class="section-icon">
                 <img src="assets/img/cv-job.png" alt="">
             </div>
-            <h2 class="background-DEBBDD">No que já trabalhei</h2>
+           <h2 class="background-DEBBDD">No que já trabalhei</h2>
             <div class="work">
                 <h3>{ Estagiária de TI}</h3>
                 <h5>{TCU  10/2019 - Presente}</h5>
@@ -61,8 +61,7 @@
             <div class="work">
                 <h3>{ Assistente de Auditoria Externa }</h3>
                 <h5>{PWC 07/2017 a 04/2019}</h5>
-                <p> Análise, consiliação e validação das Demonstrações Financeiras por meio de análises documentais e questionemantos junto a clientes.
-                    Acompanhamento de inventários e auxilio na realização de testes de auditoria.</p>
+                <p> Análise, conciliação e validação das Demonstrações Financeiras por meio de análises documentais e questionamentos junto a clientes. Acompanhamento de inventários e auxilio na realização de testes de auditoria</p>
             </div>
         </section>
         <section id="studies">
@@ -72,8 +71,7 @@
             <h2 class="background-DEBBDD">O que já estudei</h2>
             <div class="study">
                     <h3>{Front-End}</h3>
-                    <p>Curso oferecido pelo {Reprograma} como introdução as principais habilidades para a carreira de Desenvolvedora Front-End.
-                        Com foco em cosntrução de sites com HTLM5 e CSS3, responsividade com Bootstrap e dinamicidade com JS e jQuery.
+                    <p>CCurso oferecido pela {Reprograma} como introdução as principais habilidades para a carreira de Desenvolvedora Front-End. Com foco em construção de sites com HTLM5 e CSS3, responsividade com Bootstrap e dinamicidade com JS e jQuery.
                     </p>
         
             </div>
@@ -87,9 +85,10 @@
         </div>  
             <div class="study">    
                 <h3>{ Administração de Empresas }</h3>
-                    <p>Bacharel em Administração pela Universidade de Brasília (finalizado em 2017).<br/>
-                    Trabalho de conclusão de curso com foco em financiamentos coletivos, suas caracteristicas e fatores de sucesso. </p>
-             </div>
+                    <p>Bacharel em Administração pela Universidade de Brasília (finalizado em 2017).
+                        Trabalho de conclusão de curso com foco em financiamentos coletivos, suas características e fatores de sucesso.
+                         </p>
+            </div>
         </section>
         <section id="interests">
             <div class="section-icon">
@@ -233,7 +232,7 @@
                     </div>
                 </div>
                 <div class="skill">
-                    <span class="skill-name">Excel </span>
+                    <span class="skill-name">EXCEL </span>
                     <div class="points">
                         <div class="point has-point"></div>
                         <div class="point has-point"></div>
